--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "client": "cd ../my-app && npm start",
+    "client": "cd ../client && npm start",
     "dev": "concurrently -n 'server,client' -c 'red,green'  \"node server.js\" \"npm run client\""
   }, 
   "author": "",
